--- a/css/style.css
+++ b/css/style.css
@@ -11658,11 +11658,11 @@ h5,
     box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
 }
 #iconimage {
-    background-image: url('/images/products/white.jpg');
+    background-image: url('https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm255-sasi-29.jpg?w=400&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=4a47a57f9c865053b6ee3848e6c4c0e5');
     background-position: center right calc(2.25rem / 4);
 }
 .services .icon .image {
-    background-image: url('/images/newimages/products/apple-green-granite.jpg');
+    background-image: url('/');
 }
 .services .icon span {
     font-size: 40px;
